--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -796,22 +796,20 @@ kbd .cmd { font-family: Monaco, Helvetica; }
 }
 
 #methods .method {
-    padding: 5px;
+    padding: 10px;
     border:0;
     border-radius: 4px;
     margin: 7px 0;
 }
 
-#methods .method:nth-child(odd) {
+#methods .method {
     background: #f5f5f5;
-}
-
-#methods .method:nth-child(even) {
-    background: #e9e9e9;
+    border: 1px solid #ccc;
 }
 
 #methods .method:hover {
     background: #ffffe0;
+    border: 1px dashed;
 }
 
 #jump_to_method_container {
